spec/testing_dsl.spec.kex
# kex: no-check
# describe/it/assert — minimal RSpec-style testing DSL (registerTestBuiltins).
# Failing assertions mark the enclosing `it` failed without aborting the
# rest of the suite; nesting is purely organizational (indentation only).

describe("assert") do
  it("passes silently on a truthy value") do
    assert(true)
    assert(1 == 1)
  end

  it("supports a custom failure message") do
    assert(true, "this message is unused since the assertion passes")
  end
end

describe("assertion helpers") do
  it("compares values") do
    Assert.equal(1 + 1, 2)
    Assert.equal("kex", "kex")
    Assert.notEqual(1, 2)
  end

  it("checks truthiness") do
    Assert.truthy(true)
    Assert.falsy(false)
  end

  it("checks optional variants") do
    Assert.some(Just(42))
    Assert.none(None)
  end

  it("checks result variants") do
    Assert.ok(Ok(42))
    Assert.error(Error("boom"))
  end
end

describe("before and after hooks") do
  before do
    Assert.none(File.read("body-artifact"))
    Mock.FS.File("outer-hook", "outer")
  end
  after(:each) { Mock.FS.clear() }

  describe("nested hooks") do
    before(:each) do
      Assert.equal(File.read("outer-hook").or(""), "outer")
      Mock.FS.File("inner-hook", "inner")
    end

    it("runs setup from outer to inner") do
      Assert.equal(File.read("inner-hook").or(""), "inner")
      Mock.FS.File("body-artifact", "temporary")
    end

    it("runs teardown before the next test") do
      Assert.none(File.read("body-artifact"))
    end
  end
end

describe("all hooks") do
  before(:all) do
    Mock.FS.clear()
    Mock.FS.File("all-hook", "once")
  end
  after(:all) { Mock.FS.clear() }

  before { Assert.equal(File.read("all-hook").or(""), "once") }

  it("keeps all setup for the first test") do
    Assert.equal(File.read("all-hook").or(""), "once")
  end

  it("keeps all setup for later tests") do
    Assert.equal(File.read("all-hook").or(""), "once")
  end
end

describe("teardown after failure") do
  before { Assert.none(File.read("all-hook")) }
  after { Mock.FS.clear() }

  it("fails intentionally") do
    Mock.FS.File("failed-test-artifact", "temporary")
    assert(false, "intentional hook failure test")
  end

  it("still ran teardown") do
    Assert.none(File.read("failed-test-artifact"))
  end
end

describe("a group with one passing and one failing test") do
  it("passes") do
    assert(1 + 1 == 2)
  end

  it("fails") do
    assert(1 + 1 == 3, "math is broken")
  end
end

describe("nesting") do
  describe("indents one level per describe") do
    it("still runs") do
      assert(true)
    end
  end
end

describe("it survives more than just failed asserts") do
  it("catches an ordinary runtime error too, not just assert failures") do
    assert(doesNotExist == 1)
  end

  it("still runs after the previous test errored") do
    assert(true)
  end
end

# Outside of `it`, a failed assert is just an ordinary uncaught error —
# there's nothing here to catch it, so the program stops.
assert(false, "assert outside of it propagates as an uncaught error")
IO.printLine("unreachable")
